update compile-testing dep from 0.19 to 0.21.0 (#49)
Additional `--add-exports` JVM args were needed for testing.

See: https://github.com/google/compile-testing/issues/222